[tool.poetry]
name = "tg-utility-bot"
version = "0.1.0"
description = "Telegram bot for random purpose."
authors = ["odhako <odhako@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
dotenv = "^0.9.9"
aiogram = "^3.22.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
