[tool.poetry]
name = "tg-utility-bot"
version = "0.1.0"
description = "Telegram bot for random purpose."
authors = ["odhako <odhako@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
dotenv = "^0.9.9"
telethon = "^1.41.2"
cryptg = "^0.5.1"
pillow = "^11.3.0"
aiohttp = "^3.12.15"
hachoir = "^3.3.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
