[project]
name = "tg-utility-bot"
version = "0.1"
description = "Telegram bot for random purpose"
authors = [
    {name = "odhako",email = "odhako@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dotenv (>=0.9.9,<0.10.0)",
    "telethon (>=1.41.2,<2.0.0)",
    "cryptg (>=0.5.1,<0.6.0)",
    "pillow (>=11.3.0,<12.0.0)",
    "aiohttp (>=3.13.0,<4.0.0)",
    "hachoir (>=3.3.0,<4.0.0)",
    "apscheduler (>=3.11.0,<4.0.0)"
]

[tool.poetry]
package-mode = false
